Prototipo terminado, sin animaciones

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <router-outlet></router-outlet>
 <div>
-    <app-register-box></app-register-box>
-</div>
-<div>
-    <app-login-box></app-login-box>
+    <app-header></app-header>
+    <app-body></app-body>
+    <app-footer></app-footer>
 </div>
